<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.modelcontextprotocol.sdk</groupId>
	<artifactId>mcp-parent</artifactId>
	<version>0.10.0</version>

	<packaging>pom</packaging>
	<url>https://github.com/modelcontextprotocol/java-sdk</url>

	<scm>
		<url>https://github.com/modelcontextprotocol/java-sdk</url>
		<connection>git://github.com/modelcontextprotocol/java-sdk.git</connection>
		<developerConnection>git@github.com/modelcontextprotocol/java-sdk.git</developerConnection>
	</scm>

	<name>Java SDK MCP Parent</name>
	<description>Java SDK for the Model Context Protocol (MCP), enabling interaction with AI models and tools through a standardized interface</description>


	<organization>
		<name>Anthropic</name>
		<url>https://www.anthropic.com</url>
	</organization>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Christian Tzolov</name>
		</developer>
		<developer>
			<name>Dariusz Jędrzejczyk</name>
		</developer>
	</developers>

	<issueManagement>
		<system>Github Issues</system>
		<url>https://github.com/modelcontextprotocol/java-sdk/issues</url>
	</issueManagement>
	<ciManagement>
		<system>Github Actions</system>
		<url>https://github.com/modelcontextprotocol/java-sdk/actions</url>
	</ciManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<surefireArgLine/>

		<assert4j.version>3.26.3</assert4j.version>
		<junit.version>5.10.2</junit.version>
		<mockito.version>5.17.0</mockito.version>
		<testcontainers.version>1.20.4</testcontainers.version>
		<byte-buddy.version>1.17.5</byte-buddy.version>		

		<slf4j-api.version>2.0.16</slf4j-api.version>
		<logback.version>1.5.15</logback.version>
		<jackson.version>2.17.0</jackson.version>
		<springframework.version>5.3.27</springframework.version>

		<!-- plugin versions -->
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
		<maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
		<maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
		<maven-source-plugin.version>3.3.0</maven-source-plugin.version>
		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
		<flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
		<maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
		<asciidoctor-maven-plugin.version>2.2.3</asciidoctor-maven-plugin.version>
		<maven-assembly-plugin.version>3.7.0</maven-assembly-plugin.version>
		<maven-dependency-plugin.version>3.5.0</maven-dependency-plugin.version>
		<maven-site-plugin.version>4.0.0-M13</maven-site-plugin.version>
		<maven-project-info-reports-plugin.version>3.4.5</maven-project-info-reports-plugin.version>
		<maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
		<spring-javaformat-maven-plugin.version>0.0.43</spring-javaformat-maven-plugin.version>
		<org.maven.antora-version>1.0.0-alpha.4</org.maven.antora-version>
		<io.spring.maven.antora-version>0.0.4</io.spring.maven.antora-version>
		<asciidoctorj-pdf.version>1.6.2</asciidoctorj-pdf.version>
		<junit-jupiter.version>5.10.5</junit-jupiter.version>
		<tomcat.version>9.0.75</tomcat.version>
		<javax.servlet.version>4.0.1</javax.servlet.version>
		<awaitility.version>4.2.0</awaitility.version>
		<json-unit-assertj.version>4.1.0</json-unit-assertj.version>

	</properties>

	<modules>
		<module>mcp-bom</module>
		<module>mcp</module>
		<module>mcp-spring/mcp-spring-webflux</module>
		<module>mcp-spring/mcp-spring-webmvc</module>
	</modules>

	<build>
		<plugins>
			<!--<plugin>
				<groupId>io.spring.javaformat</groupId>
				<artifactId>spring-javaformat-maven-plugin</artifactId>
				<version>${spring-javaformat-maven-plugin.version}</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<inherited>true</inherited>
						<goals>
							<goal>validate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>${maven-site-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<compilerArgs>
						<compilerArg>-parameters</compilerArg>
					</compilerArgs>
				</configuration>
				<executions>
					<!-- Replacing default-compile as it is treated specially by Maven -->
					<execution>
						<id>default-compile</id>
						<phase>none</phase>
					</execution>
					<!-- Replacing default-testCompile as it is treated specially by Maven -->
					<execution>
						<id>default-testCompile</id>
						<phase>none</phase>
					</execution>
					<execution>
						<id>java-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>java-test-compile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argLine>${surefireArgLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
					<useFile>false</useFile>
					<trimStackTrace>false</trimStackTrace>

					<!-- Show test timing information -->
					<reportFormat>plain</reportFormat>

					<!-- Output test execution times in the logs -->
					<redirectTestOutputToFile>false</redirectTestOutputToFile>

				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Implementation-Title>${project.artifactId}</Implementation-Title>
							<Implementation-Version>${project.version}</Implementation-Version>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>generate-sources</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>${flatten-maven-plugin.version}</version>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
						<configuration>
							<updatePomFile>true</updatePomFile>
							<flattenMode>ossrh</flattenMode>
							<pomElements>
								<distributionManagement>remove</distributionManagement>
								<dependencyManagement>remove</dependencyManagement>
								<repositories>remove</repositories>
								<scm>keep</scm>
								<url>keep</url>
								<organization>resolve</organization>
							</pomElements>
						</configuration>
					</execution>
					<execution>
						<id>clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>${maven-deploy-plugin.version}</version>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>javadoc</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${maven-javadoc-plugin.version}</version>
						<configuration>
							<detectJavaApiLink>false</detectJavaApiLink>
							<failOnError>false</failOnError>
							<doclint>none</doclint>
							<additionalOptions>
								<additionalOption>-Xdoclint:none</additionalOption>
							</additionalOptions>
							<source>${java.version}</source>
							<quiet>true</quiet>
						</configuration>
						<executions>
							<execution>
								<id>generate-javadocs</id>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
							<execution>
								<id>generate-aggregate-javadocs</id>
								<phase>package</phase>
								<goals>
									<goal>aggregate</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.7.0</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<autoPublish>true</autoPublish>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.7</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
									<passphrase>${env.MAVEN_GPG_PASSPHRASE}</passphrase>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.projectreactor</groupId>
				<artifactId>reactor-bom</artifactId>
				<version>2024.0.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<repositories>
		<repository>
			<id>maven-central</id>
			<url>https://repo.maven.apache.org/maven2/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>

</project>
